Added proper variables into single exercise template

--- a/src/templates/single-exercise.tex
+++ b/src/templates/single-exercise.tex
@@ -3,9 +3,9 @@
 {\setlength{\extrarowheight}{10pt}%
     \begin{tabularx}{\textwidth}{|X|X|X|}
         \hline
-        \multicolumn{3}{|X|}{EXERCISE\_NAME\_VAR} \\
+        \multicolumn{3}{|X|}{\VAR{exercise_name}} \\
         \hline
-        WEIGHT\_VAR & REPS\_VAR & SETS\_VAR \\
+        \VAR{weight} lb & x \VAR{reps} reps & x \VAR{sets} sets \\
         \hline
         Sets & \multicolumn{2}{|X|}{ } \\
         \hline
