update templates post-testing of automation

--- a/src/templates/single_exercise.tex
+++ b/src/templates/single_exercise.tex
@@ -3,7 +3,7 @@
 {\setlength{\extrarowheight}{10pt}%
     \begin{tabularx}{\textwidth}{|X|X|X|}
         \hline
-        \multicolumn{3}{|X|}{\VAR{exercise_name}} \\
+        \multicolumn{3}{|X|}{\VAR{name}} \\
         \hline
         \VAR{weight} lb & x \VAR{reps} reps & x \VAR{sets} sets \\
         \hline
@@ -13,6 +13,6 @@
         \hline
         Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+\vspace{0.25cm}
