--- a/src/templates/workout_wrapper.tex
+++ b/src/templates/workout_wrapper.tex
@@ -3,8 +3,12 @@
 \pagestyle{empty}
 
 \begin{document}
-\section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} - \hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} \VAR{workout_type}}
 
-\VAR{workout_content}
+\begin{center}
 
+    \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} \VAR{workoutType}}
+
+    \VAR{workoutContent}
+
+\end{center}
 \end{document}
