Adjust page margins to allow more entries per page

--- a/src/templates/workout_wrapper.tex
+++ b/src/templates/workout_wrapper.tex
@@ -1,6 +1,15 @@
 \documentclass{article}
+
+\usepackage{geometry}
 \usepackage{tabularx}
+
 \pagestyle{empty}
+\geometry{
+ letterpaper,
+ total={170mm,250mm},
+ left=20mm,
+ top=20mm,
+ }
 
 \begin{document}
 
