Generalize generated templates to accomodate changes over time

--- a/src/templates/single_exercise.tex
+++ b/src/templates/single_exercise.tex
@@ -1,10 +1,13 @@
 
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{|X|X|X|}
+    \begin{tabularx}{\textwidth}{ 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{\VAR{name}} \\
         \hline
-        \VAR{weight} lb & x \VAR{reps} reps & x \VAR{sets} sets \\
+        lb. & reps &  sets \\
         \hline
         Sets & \multicolumn{2}{|X|}{ } \\
         \hline
