generalize existing template

--- a/src/workouts/leg_day_lower_back_modified.tex
+++ b/src/workouts/leg_day_lower_back_modified.tex
@@ -6,7 +6,7 @@
 \pagestyle{empty}
 \geometry{
  letterpaper,
- total={170mm,240mm},
+ total={170mm,250mm},
  left=20mm,
  top=20mm,
  }
@@ -15,15 +15,18 @@
 
 \begin{center}
 
-    \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Leg Day (lower back modified)}
+    \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Leg Day lower back modified}
 
     
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{|X|X|X|}
+    \begin{tabularx}{\textwidth}{ 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Seated Leg Curl} \\
         \hline
-        100 lb & x 10 reps & x 3 sets \\
+        lb. & reps &  sets \\
         \hline
         Sets & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -35,11 +38,14 @@
     \end{tabularx}}
 \vspace{0.25cm}
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{|X|X|X|}
+    \begin{tabularx}{\textwidth}{ 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Leg Extension} \\
         \hline
-        100 lb & x 10 reps & x 3 sets \\
+        lb. & reps &  sets \\
         \hline
         Sets & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -51,11 +57,14 @@
     \end{tabularx}}
 \vspace{0.25cm}
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{|X|X|X|}
+    \begin{tabularx}{\textwidth}{ 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Calf Raise} \\
         \hline
-        180 lb & x 10 reps & x 3 sets \\
+        lb. & reps &  sets \\
         \hline
         Sets & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -67,11 +76,14 @@
     \end{tabularx}}
 \vspace{0.25cm}
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{|X|X|X|}
+    \begin{tabularx}{\textwidth}{ 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Abduction} \\
         \hline
-        80 lb & x 10 reps & x 3 sets \\
+        lb. & reps &  sets \\
         \hline
         Sets & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -83,11 +95,14 @@
     \end{tabularx}}
 \vspace{0.25cm}
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{|X|X|X|}
+    \begin{tabularx}{\textwidth}{ 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Adduction} \\
         \hline
-        70 lb & x 10 reps & x 3 sets \\
+        lb. & reps &  sets \\
         \hline
         Sets & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -99,27 +114,14 @@
     \end{tabularx}}
 \vspace{0.25cm}
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{|X|X|X|}
+    \begin{tabularx}{\textwidth}{ 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Sit Ups} \\
+        \multicolumn{3}{|X|}{Sit Up} \\
         \hline
-        N/A lb & x 10 reps & x 3 sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-\vspace{0.25cm}
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{|X|X|X|}
-        \hline
-        \multicolumn{3}{|X|}{Oblique Crunches} \\
-        \hline
-        N/A lb & x 10 per side reps & x 3 sets \\
+        lb. & reps &  sets \\
         \hline
         Sets & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -131,11 +133,33 @@
     \end{tabularx}}
 \vspace{0.25cm}
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{|X|X|X|}
+    \begin{tabularx}{\textwidth}{ 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X | }
+        \hline
+        \multicolumn{3}{|X|}{Oblique Crunch} \\
+        \hline
+        lb. & reps &  sets \\
+        \hline
+        Sets & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Time Interval & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Notes & \multicolumn{2}{c|}{} \\
+              & \multicolumn{2}{c|}{} \\
+        \hline
+    \end{tabularx}}
+\vspace{0.25cm}
+{\setlength{\extrarowheight}{10pt}%
+    \begin{tabularx}{\textwidth}{ 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X 
+      | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Glute Bridge (bodyweight)} \\
         \hline
-        N/A lb & x 10 reps & x 3 sets \\
+        lb. & reps &  sets \\
         \hline
         Sets & \multicolumn{2}{|X|}{ } \\
         \hline
