Fixed Spacing, whitespace, alignment, and workout consistency

--- a/src/workouts/free_weights.tex
+++ b/src/workouts/free_weights.tex
@@ -1,3 +1,4 @@
+
 \documentclass{article}
 
 \usepackage{geometry}
@@ -15,13 +16,15 @@
 
 \begin{center}
 
-    \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Free Weights}
+\section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Free Weights}
 
-    
+\vspace{1.5cm}
+
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{YTI} \\
@@ -36,11 +39,13 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Bicep Curl} \\
@@ -55,11 +60,13 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Shoulder Press} \\
@@ -74,11 +81,13 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Tricep Kickback} \\
@@ -93,14 +102,16 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Leg Lift} \\
+        \multicolumn{3}{|X|}{Barbell Shrug} \\
         \hline
         lb. & reps &  sets \\
         \hline
@@ -112,11 +123,55 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X | }
+        \hline
+        \multicolumn{3}{|X|}{Cat/Cow} \\
+        \hline
+        lb. & reps &  sets \\
+        \hline
+        Sets & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Time Interval & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Notes & \multicolumn{2}{c|}{} \\
+              & \multicolumn{2}{c|}{} \\
+        \hline
+    \end{tabularx}}
+
+\vspace{0.25cm}
+
+{\setlength{\extrarowheight}{10pt}%
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X | }
+        \hline
+        \multicolumn{3}{|X|}{Sit Up} \\
+        \hline
+        lb. & reps &  sets \\
+        \hline
+        Sets & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Time Interval & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Notes & \multicolumn{2}{c|}{} \\
+              & \multicolumn{2}{c|}{} \\
+        \hline
+    \end{tabularx}}
+
+\vspace{0.25cm}
+
+{\setlength{\extrarowheight}{10pt}%
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Oblique Crunch} \\
@@ -131,7 +186,9 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 
 \end{center}
 \end{document}
