--- a/src/workouts/leg_day_lower_back_modified.tex
+++ b/src/workouts/leg_day_lower_back_modified.tex
@@ -1,3 +1,4 @@
+
 \documentclass{article}
 
 \usepackage{geometry}
@@ -15,32 +16,15 @@
 
 \begin{center}
 
-    \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Leg Day lower back modified}
+\section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Leg Day lower back modified}
 
-    
+\vspace{1.5cm}
+
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Seated Leg Curl} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-\vspace{0.25cm}
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Leg Extension} \\
@@ -55,11 +39,34 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X | }
+        \hline
+        \multicolumn{3}{|X|}{Seated Leg Curl} \\
+        \hline
+        lb. & reps &  sets \\
+        \hline
+        Sets & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Time Interval & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Notes & \multicolumn{2}{c|}{} \\
+              & \multicolumn{2}{c|}{} \\
+        \hline
+    \end{tabularx}}
+
+\vspace{0.25cm}
+
+{\setlength{\extrarowheight}{10pt}%
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Calf Raise} \\
@@ -74,11 +81,13 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Abduction} \\
@@ -93,11 +102,13 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Adduction} \\
@@ -112,11 +123,34 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X | }
+        \hline
+        \multicolumn{3}{|X|}{Cat/Cow} \\
+        \hline
+        lb. & reps &  sets \\
+        \hline
+        Sets & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Time Interval & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Notes & \multicolumn{2}{c|}{} \\
+              & \multicolumn{2}{c|}{} \\
+        \hline
+    \end{tabularx}}
+
+\vspace{0.25cm}
+
+{\setlength{\extrarowheight}{10pt}%
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Sit Up} \\
@@ -131,11 +165,13 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Oblique Crunch} \\
@@ -150,11 +186,13 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Glute Bridge (bodyweight)} \\
@@ -169,7 +207,9 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 
 \end{center}
 \end{document}
