--- a/src/templates/workout_wrapper.tex
+++ b/src/templates/workout_wrapper.tex
@@ -1,3 +1,4 @@
+
 \documentclass{article}
 
 \usepackage{geometry}
@@ -15,9 +16,11 @@
 
 \begin{center}
 
-    \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} \VAR{workoutType}}
+\section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} \VAR{workoutType}}
 
-    \VAR{workoutContent}
+\vspace{1.5cm}
+
+\VAR{workoutContent}
 
 \end{center}
 \end{document}
