--- a/src/workouts/back_and_chest.tex
+++ b/src/workouts/back_and_chest.tex
@@ -1,3 +1,4 @@
+
 \documentclass{article}
 
 \usepackage{geometry}
@@ -15,13 +16,15 @@
 
 \begin{center}
 
-    \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Back and Chest}
+\section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Back and Chest}
 
-    
+\vspace{1.5cm}
+
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Iso-lateral Bench Press} \\
@@ -36,14 +39,16 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{One-arm Row (cable machine)} \\
+        \multicolumn{3}{|X|}{One-Arm Row} \\
         \hline
         lb. & reps &  sets \\
         \hline
@@ -55,11 +60,13 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Lat Pulldown} \\
@@ -74,14 +81,16 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Barbell Shrug} \\
+        \multicolumn{3}{|X|}{Cat/Cow} \\
         \hline
         lb. & reps &  sets \\
         \hline
@@ -93,11 +102,34 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X | }
+        \hline
+        \multicolumn{3}{|X|}{Superman} \\
+        \hline
+        lb. & reps &  sets \\
+        \hline
+        Sets & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Time Interval & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Notes & \multicolumn{2}{c|}{} \\
+              & \multicolumn{2}{c|}{} \\
+        \hline
+    \end{tabularx}}
+
+\vspace{0.25cm}
+
+{\setlength{\extrarowheight}{10pt}%
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Plank} \\
@@ -112,14 +144,16 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Side Bend} \\
+        \multicolumn{3}{|X|}{Side Plank} \\
         \hline
         lb. & reps &  sets \\
         \hline
@@ -131,7 +165,9 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 
 \end{center}
 \end{document}
