--- a/src/workouts/leg_day.tex
+++ b/src/workouts/leg_day.tex
@@ -1,3 +1,4 @@
+
 \documentclass{article}
 
 \usepackage{geometry}
@@ -15,13 +16,15 @@
 
 \begin{center}
 
-    \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Leg Day}
+\section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Leg Day}
 
-    
+\vspace{1.5cm}
+
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Leg Press} \\
@@ -36,30 +39,13 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Calf Raise} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-\vspace{0.25cm}
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Abduction} \\
@@ -74,11 +60,13 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Adduction} \\
@@ -93,14 +81,16 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Sit Up} \\
+        \multicolumn{3}{|X|}{Calf Raise} \\
         \hline
         lb. & reps &  sets \\
         \hline
@@ -112,14 +102,16 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Oblique Crunch} \\
+        \multicolumn{3}{|X|}{Cat/Cow} \\
         \hline
         lb. & reps &  sets \\
         \hline
@@ -131,11 +123,55 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 {\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{ 
-      | >{\raggedleft\arraybackslash}X 
-      | >{\raggedleft\arraybackslash}X 
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X | }
+        \hline
+        \multicolumn{3}{|X|}{Leg Lift} \\
+        \hline
+        lb. & reps &  sets \\
+        \hline
+        Sets & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Time Interval & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Notes & \multicolumn{2}{c|}{} \\
+              & \multicolumn{2}{c|}{} \\
+        \hline
+    \end{tabularx}}
+
+\vspace{0.25cm}
+
+{\setlength{\extrarowheight}{10pt}%
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X | }
+        \hline
+        \multicolumn{3}{|X|}{Side Bend} \\
+        \hline
+        lb. & reps &  sets \\
+        \hline
+        Sets & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Time Interval & \multicolumn{2}{|X|}{ } \\
+        \hline
+        Notes & \multicolumn{2}{c|}{} \\
+              & \multicolumn{2}{c|}{} \\
+        \hline
+    \end{tabularx}}
+
+\vspace{0.25cm}
+
+{\setlength{\extrarowheight}{10pt}%
+    \begin{tabularx}{\textwidth}{
+      | >{\raggedleft\arraybackslash}X
+      | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
         \multicolumn{3}{|X|}{Kas Glute Bridge} \\
@@ -150,7 +186,9 @@
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
+
 \vspace{0.25cm}
+
 
 \end{center}
 \end{document}
