Updated current workout templates to include supersets

--- a/src/workouts/back_and_chest.tex
+++ b/src/workouts/back_and_chest.tex
@@ -18,20 +18,20 @@
 
 \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Back and Chest}
 
-\vspace{1.5cm}
+\vspace{1.25cm}
 
-
+ 
 {\setlength{\extrarowheight}{10pt}%
     \begin{tabularx}{\textwidth}{
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Iso-lateral Bench Press} \\
+        \multicolumn{3}{|X|}{Iso-Lateral Bench Press} \\
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -52,7 +52,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -73,7 +73,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -88,80 +88,21 @@
     \begin{tabularx}{\textwidth}{
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
+      | >{\raggedright\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Cat/Cow} \\
+        \multicolumn{2}{|X|}{ Core Circuit} & sets \\
         \hline
-        lb. & reps &  sets \\
+                 Cat/Cow & lb. & reps \\
+        \hline        Superman & lb. & reps \\
+        \hline        Plank & lb. & reps \\
+        \hline        Side Plank & lb. & reps \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        \multicolumn{3}{|X|}{Time Interval(s): } \\
         \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Superman} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
+        Sets Complete: &  \multicolumn{2}{c|}{} \\
         \hline
         Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Plank} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Side Plank} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
