--- a/src/workouts/free_weights.tex
+++ b/src/workouts/free_weights.tex
@@ -18,9 +18,9 @@
 
 \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Free Weights}
 
-\vspace{1.5cm}
+\vspace{1.25cm}
 
-
+ 
 {\setlength{\extrarowheight}{10pt}%
     \begin{tabularx}{\textwidth}{
       | >{\raggedleft\arraybackslash}X
@@ -31,7 +31,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -46,59 +46,20 @@
     \begin{tabularx}{\textwidth}{
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
+      | >{\raggedright\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Bicep Curl} \\
+        \multicolumn{2}{|X|}{ Upper Arm + Shoulder Circuit} & sets \\
         \hline
-        lb. & reps &  sets \\
+                 Bicep Curl & lb. & reps \\
+        \hline        Shoulder Press & lb. & reps \\
+        \hline        Tricep Kickback & lb. & reps \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        \multicolumn{3}{|X|}{Time Interval(s): } \\
         \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Shoulder Press} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
+        Sets Complete: &  \multicolumn{2}{c|}{} \\
         \hline
         Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Tricep Kickback} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
@@ -115,7 +76,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -130,59 +91,20 @@
     \begin{tabularx}{\textwidth}{
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
+      | >{\raggedright\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Cat/Cow} \\
+        \multicolumn{2}{|X|}{ Core Circuit} & sets \\
         \hline
-        lb. & reps &  sets \\
+                 Cat/Cow & lb. & reps \\
+        \hline        Sit-Up & lb. & reps \\
+        \hline        Oblique Crunch & lb. & reps \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        \multicolumn{3}{|X|}{Time Interval(s): } \\
         \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Sit Up} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
+        Sets Complete: &  \multicolumn{2}{c|}{} \\
         \hline
         Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Oblique Crunch} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
