--- a/src/workouts/leg_day_lower_back_modified.tex
+++ b/src/workouts/leg_day_lower_back_modified.tex
@@ -18,9 +18,9 @@
 
 \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Leg Day lower back modified}
 
-\vspace{1.5cm}
+\vspace{1.25cm}
 
-
+ 
 {\setlength{\extrarowheight}{10pt}%
     \begin{tabularx}{\textwidth}{
       | >{\raggedleft\arraybackslash}X
@@ -31,7 +31,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -52,7 +52,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -73,7 +73,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -90,11 +90,11 @@
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Abduction} \\
+        \multicolumn{3}{|X|}{Hip Abduction} \\
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -111,11 +111,11 @@
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Adduction} \\
+        \multicolumn{3}{|X|}{Hip Adduction} \\
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -130,80 +130,21 @@
     \begin{tabularx}{\textwidth}{
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
+      | >{\raggedright\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Cat/Cow} \\
+        \multicolumn{2}{|X|}{ Core + Back Circuit} & sets \\
         \hline
-        lb. & reps &  sets \\
+                 Cat/Cow & lb. & reps \\
+        \hline        Sit Up & lb. & reps \\
+        \hline        Oblique Crunch & lb. & reps \\
+        \hline        Glute Bridge (bodyweight) & lb. & reps \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        \multicolumn{3}{|X|}{Time Interval(s): } \\
         \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Sit Up} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
+        Sets Complete: &  \multicolumn{2}{c|}{} \\
         \hline
         Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Oblique Crunch} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Glute Bridge (bodyweight)} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
