--- a/src/workouts/leg_day.tex
+++ b/src/workouts/leg_day.tex
@@ -18,9 +18,9 @@
 
 \section*{\hspace{.5cm}/\hspace{.5cm}/\hspace{.5cm} Leg Day}
 
-\vspace{1.5cm}
+\vspace{1.25cm}
 
-
+ 
 {\setlength{\extrarowheight}{10pt}%
     \begin{tabularx}{\textwidth}{
       | >{\raggedleft\arraybackslash}X
@@ -31,7 +31,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -48,11 +48,11 @@
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Abduction} \\
+        \multicolumn{3}{|X|}{Hip Abduction} \\
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -69,11 +69,11 @@
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Adduction} \\
+        \multicolumn{3}{|X|}{Hip Adduction} \\
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -94,7 +94,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
@@ -109,59 +109,20 @@
     \begin{tabularx}{\textwidth}{
       | >{\raggedleft\arraybackslash}X
       | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
+      | >{\raggedright\arraybackslash}X | }
         \hline
-        \multicolumn{3}{|X|}{Cat/Cow} \\
+        \multicolumn{2}{|X|}{ Core Circuit} & sets \\
         \hline
-        lb. & reps &  sets \\
+                 Cat/Cow & lb. & reps \\
+        \hline        Leg Lift & lb. & reps \\
+        \hline        Side Bend & lb. & reps \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        \multicolumn{3}{|X|}{Time Interval(s): } \\
         \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
-              & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Leg Lift} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
+        Sets Complete: &  \multicolumn{2}{c|}{} \\
         \hline
         Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
-        \hline
-    \end{tabularx}}
-
-\vspace{0.25cm}
-
-{\setlength{\extrarowheight}{10pt}%
-    \begin{tabularx}{\textwidth}{
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X
-      | >{\raggedleft\arraybackslash}X | }
-        \hline
-        \multicolumn{3}{|X|}{Side Bend} \\
-        \hline
-        lb. & reps &  sets \\
-        \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Time Interval & \multicolumn{2}{|X|}{ } \\
-        \hline
-        Notes & \multicolumn{2}{c|}{} \\
               & \multicolumn{2}{c|}{} \\
         \hline
     \end{tabularx}}
@@ -178,7 +139,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
