--- a/src/templates/single_exercise.tex
+++ b/src/templates/single_exercise.tex
@@ -9,7 +9,7 @@
         \hline
         lb. & reps &  sets \\
         \hline
-        Sets & \multicolumn{2}{|X|}{ } \\
+        Sets Complete:& \multicolumn{2}{|X|}{ } \\
         \hline
         Time Interval & \multicolumn{2}{|X|}{ } \\
         \hline
